seeders + property controller
