# routes/api.php
@@ -3,6 +3,8 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\v1\Auth\AuthController;
+use App\Http\Controllers\Api\v1\PropertiesController;
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -29,6 +31,7 @@ Route::prefix('v1')->group(function(){
     });
 
 
+    Route::apiResource('properties', PropertiesController::class);
 });
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
